--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -12,6 +12,7 @@
 @using CCC_Rugby_Web.Components
 @using MudBlazor
 @using MudBlazor.Services
+@using MudBlazor.Components
 @using CCC_Rugby_Web.Services
 @using CCC_Rugby_Web.Utilities
 @using CCC_Rugby_Web.Models
@@ -24,3 +25,4 @@
 @inject HttpClient HttpClient
 @inject IUtilities Utilities
 @inject ILoadingService LoadingService
+@inject INotificationService NotificationService
