--- a/Components/Pages/Ventas/ListadoPedidos.razor
+++ b/Components/Pages/Ventas/ListadoPedidos.razor
@@ -2,8 +2,7 @@
 @using CCC_Rugby_Web.Utilities
 @layout MainLayout
 @attribute [Authorize]
-
-
+@inject INotificationService NotificationService
 
 <CustomView Roles="pedidos">
     <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="pa-4 d-flex flex-column" Style="height: 100%; overflow: hidden;">
@@ -32,20 +31,21 @@
                     <MudIconButton Style="height:fit-content" Color="Color.Primary" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" OnClick="ReloadTable" Icon="@Icons.Material.Filled.Search" />
                 </MudItem>
                 <MudItem xs="4" sm="1" md="1" Class="d-flex align-center">
-                    <MudIconButton Style="height:fit-content" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" Color="Color.Primary" Icon="@Icons.Material.Filled.Add" />
+                    <MudIconButton Style="height:fit-content" Disabled="@LoadingService.IsLoading" Variant="Variant.Filled" Color="Color.Primary" Icon="@Icons.Material.Filled.Add" OnClick="Error" />
                 </MudItem>
             </MudGrid>
         </MudPaper>
         <br/>
-            <MudTable @ref="table" 
-                     T="PedidoDTO" 
-                     ServerData="ShowList"
-                     Class="d-flex flex-column"
-                     Style="height: 100%;"
-                     FixedHeader="true"
-                     FixedFooter="false"
-                     Dense="true"
-                     Hover="true">
+            <MudTable 
+                @ref="table" 
+                T="PedidoDTO" 
+                ServerData="ShowList"
+                Class="d-flex flex-column"
+                Style="height: 100%;"
+                FixedHeader="true"
+                FixedFooter="false"
+                Dense="true"
+                Hover="true">
 
                 <HeaderContent>
                     <MudTh Style="font-weight: bold;"># Pedido</MudTh>
@@ -145,7 +145,10 @@
             return new TableData<PedidoDTO>() { TotalItems = 0, Items = new List<PedidoDTO>() };
         }        
     }
-
+    private void Error()
+    {
+        NotificationService.ShowError("Error de prueba");
+    }
 
     private async Task LoadTipoArticulos()
     {
@@ -153,7 +156,7 @@
         {
             try
             {
-                tipoSeleccionado = tipoDefault; // Inicializar con el valor por defecto
+                tipoSeleccionado = tipoDefault;
                 var response = await HttpClient.GetAsync("api/Articulo/GetTipoArticulos");
                 if (response.IsSuccessStatusCode)
                 {
@@ -161,14 +164,12 @@
                 }
                 else
                 {
-                    // Manejar error de la API
-                    Console.WriteLine($"Error al cargar tipos de artículos: {response.ReasonPhrase}");
+                    NotificationService.ShowError($"Error al cargar tipos de artículos: {response.ReasonPhrase}");
                 }
             }
             catch (Exception ex)
             {
-                // Manejar excepciones
-                Console.WriteLine($"Excepción al cargar tipos de artículos: {ex.Message}");
+                NotificationService.ShowError($"Error cargando tipos de artículos: {ex.Message}");
             }
         }
     }
