--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -26,3 +26,4 @@
 @inject IUtilities Utilities
 @inject ILoadingService LoadingService
 @inject INotificationService NotificationService
+@inject ISnackbar Snackbar
