--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,11 +1,6 @@
-﻿@inherits LayoutComponentBase
-@using System.IdentityModel.Tokens.Jwt
-@using System.Reflection
-@using CCC_Rugby_Web.Models.Entityes
-@using Microsoft.AspNetCore.Components.Authorization
+﻿@using System.Reflection
 @using System.Security.Claims
-@using System.Net.Http
-@using System.Text.Json
+@inherits LayoutComponentBase
 @inject NavigationManager navManager
 @inject AuthService authService
 @inject AuthStateProvider auth
