--- a/Components/Layout/LoginLayout.razor
+++ b/Components/Layout/LoginLayout.razor
@@ -1,4 +1,8 @@
 ﻿@inherits LayoutComponentBase
+@inject INotificationService NotificationService
+@inject IDialogService DialogService
+@inject ISnackbar Snackbar
+@inject ILoadingService LoadingService
 
 <MudThemeProvider IsDarkMode="true" />
 <MudPopoverProvider />
