--- a/Components/Pages/Ventas/TiposArticulo.razor
+++ b/Components/Pages/Ventas/TiposArticulo.razor
@@ -2,6 +2,7 @@
 @layout MainLayout
 @attribute [Authorize]
 @inject HttpClient httpClient
+@inject INotificationService NotificationService
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Net.Http.Headers;
 
