--- a/Components/Pages/Ventas/Articulos.razor
+++ b/Components/Pages/Ventas/Articulos.razor
@@ -42,6 +42,6 @@
 
     private void ShowErrorMessage()
     {
-        NotificationService.ShowError("¡Error! Algo salió mal en la operación");
+        NotificationService.ShowError("¡Error! Algo salió mal en la operación", descripcion: "descripcion de prueba");
     }
 }
