--- a/Components/Utils/ErrorBundary.razor
+++ b/Components/Utils/ErrorBundary.razor
@@ -8,7 +8,7 @@
     <ErrorContent Context="exception">
         @{
             // Mostrar notificación de error
-            NotificationService.ShowError(GetUserFriendlyMessage(exception));
+            NotificationService.ShowError(GetUserFriendlyMessage(exception), descripcion: exception.Message);
         }
         <div class="error-boundary">
             <MudAlert Severity="Severity.Error" Variant="Variant.Filled">
