Elimino los controladorees

--- a/Components/Layout/LoginLayout.razor
+++ b/Components/Layout/LoginLayout.razor
@@ -24,5 +24,6 @@
     protected override void OnInitialized()
     {
         NotificationService.SetSnackbar(Snackbar);
+        NotificationService.SetDialogService(DialogService);
     }
 }
