--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -22,3 +22,4 @@
 @using CCC_Rugby_Web.Components.Layout
 @using CCC_Rugby_Web.Components.Utils
 @using static CCC_Rugby_Web.Services.Constants
+@using CCC_Rugby_Web.Models.Repositories
